fixing vertical alignment of url favicons

--- a/picky/static/css/picky.css
+++ b/picky/static/css/picky.css
@@ -99,3 +99,7 @@ ul {
     float: left;
     color: gray;
 }
+
+img.favicon {
+    vertical-align: middle;
+}
